<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityOperaciones">

    <TextView
        android:id="@+id/txtO1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/num1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/num2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtN1" />

    <EditText
        android:id="@+id/txtN1"
        android:layout_width="267dp"
        android:layout_height="29dp"
        android:layout_marginTop="20dp"
        android:background="@color/material_dynamic_primary70"
        android:ems="10"
        android:inputType="textPersonName"
        android:numeric="integer|decimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtO1"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/txtN2"
        android:layout_width="267dp"
        android:layout_height="29dp"
        android:layout_marginTop="24dp"
        android:background="@color/material_dynamic_primary70"
        android:ems="10"
        android:inputType="textPersonName"
        android:numeric="integer|decimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtO"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnSuma"
        android:layout_width="283dp"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/holo_orange_light"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="@string/sum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtN2" />

    <Button
        android:id="@+id/btnResta"
        android:layout_width="282dp"
        android:layout_height="61dp"
        android:text="@string/res"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSuma" />

    <Button
        android:id="@+id/btnMult"
        android:layout_width="282dp"
        android:layout_height="61dp"
        android:text="@string/mult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnResta" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="282dp"
        android:layout_height="61dp"
        android:text="@string/div"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMult" />
</androidx.constraintlayout.widget.ConstraintLayout>